finished initial feature engineering pre-split

--- a/code/02-build/02-train-validation-test-split.ipynb
+++ b/code/02-build/02-train-validation-test-split.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -75,74 +75,119 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>Author</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>Poetry Foundation ID</th>\n",
-       "      <th>Content</th>\n",
+       "      <th>author</th>\n",
+       "      <th>title</th>\n",
+       "      <th>poetry_foundation_id</th>\n",
+       "      <th>raw_content</th>\n",
+       "      <th>clean_content</th>\n",
+       "      <th>author_poem_count</th>\n",
+       "      <th>author_poem_index</th>\n",
+       "      <th>author_poem_pct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Wendy Videlock</td>\n",
-       "      <td>!</td>\n",
-       "      <td>55489</td>\n",
-       "      <td>Dear Writers, I’m compiling the first in what ...</td>\n",
+       "      <td>William Wordsworth</td>\n",
+       "      <td>from\\n  \\n  The Prelude: Book 1: Childhood and...</td>\n",
+       "      <td>45542</td>\n",
+       "      <td>—Was it for this\\nThat one, the fairest of all...</td>\n",
+       "      <td>—was this\\nthat one fairest river lovd\\nto ble...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Hailey Leithauser</td>\n",
+       "      <td>William Blake</td>\n",
+       "      <td>The Ecchoing Green</td>\n",
+       "      <td>56592</td>\n",
+       "      <td>The sun does arise,\\nAnd make happy the skies....</td>\n",
+       "      <td>sun arise\\nand make happi skies\\nth merri bell...</td>\n",
+       "      <td>38</td>\n",
        "      <td>0</td>\n",
-       "      <td>41729</td>\n",
-       "      <td>Philosophic\\nin its complex, ovoid emptiness,\\...</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Jody Gladding</td>\n",
-       "      <td>1-800-FEAR</td>\n",
-       "      <td>57135</td>\n",
-       "      <td>We'd  like  to  talk  with  you  about  fear t...</td>\n",
+       "      <td>Robert Browning</td>\n",
+       "      <td>The Lost Mistress</td>\n",
+       "      <td>50499</td>\n",
+       "      <td>All’s over, then: does truth sound bitter\\nAs ...</td>\n",
+       "      <td>all truth sound bitter\\na one first believes\\n...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Joseph Brodsky</td>\n",
-       "      <td>1 January 1965</td>\n",
-       "      <td>56736</td>\n",
-       "      <td>The Wise Men will unlearn your name.\\nAbove yo...</td>\n",
+       "      <td>Sir  Thomas Wyatt</td>\n",
+       "      <td>Whoso List to Hunt, I Know where is an Hind</td>\n",
+       "      <td>45593</td>\n",
+       "      <td>Whoso list to hunt, I know where is an hind,\\n...</td>\n",
+       "      <td>whoso list hunt know hind\\nbut me\\nhéla may mo...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Ted Berrigan</td>\n",
-       "      <td>3 Pages</td>\n",
-       "      <td>51624</td>\n",
-       "      <td>For Jack Collom\\n10 Things I do Every Day\\n\\np...</td>\n",
+       "      <td>Thomas Hardy</td>\n",
+       "      <td>No Buyers</td>\n",
+       "      <td>44331</td>\n",
+       "      <td>A Load of brushes and baskets and cradles and ...</td>\n",
+       "      <td>load brush basket cradl chairs\\nlabour along s...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0             Author           Title  Poetry Foundation ID  \\\n",
-       "0           0     Wendy Videlock               !                 55489   \n",
-       "1           1  Hailey Leithauser               0                 41729   \n",
-       "2           2      Jody Gladding      1-800-FEAR                 57135   \n",
-       "3           3     Joseph Brodsky  1 January 1965                 56736   \n",
-       "4           4       Ted Berrigan         3 Pages                 51624   \n",
+       "   Unnamed: 0              author  \\\n",
+       "0           0  William Wordsworth   \n",
+       "1           1       William Blake   \n",
+       "2           2     Robert Browning   \n",
+       "3           3   Sir  Thomas Wyatt   \n",
+       "4           4        Thomas Hardy   \n",
        "\n",
-       "                                             Content  \n",
-       "0  Dear Writers, I’m compiling the first in what ...  \n",
-       "1  Philosophic\\nin its complex, ovoid emptiness,\\...  \n",
-       "2  We'd  like  to  talk  with  you  about  fear t...  \n",
-       "3  The Wise Men will unlearn your name.\\nAbove yo...  \n",
-       "4  For Jack Collom\\n10 Things I do Every Day\\n\\np...  "
+       "                                               title  poetry_foundation_id  \\\n",
+       "0  from\\n  \\n  The Prelude: Book 1: Childhood and...                 45542   \n",
+       "1                                 The Ecchoing Green                 56592   \n",
+       "2                                  The Lost Mistress                 50499   \n",
+       "3        Whoso List to Hunt, I Know where is an Hind                 45593   \n",
+       "4                                          No Buyers                 44331   \n",
+       "\n",
+       "                                         raw_content  \\\n",
+       "0  —Was it for this\\nThat one, the fairest of all...   \n",
+       "1  The sun does arise,\\nAnd make happy the skies....   \n",
+       "2  All’s over, then: does truth sound bitter\\nAs ...   \n",
+       "3  Whoso list to hunt, I know where is an hind,\\n...   \n",
+       "4  A Load of brushes and baskets and cradles and ...   \n",
+       "\n",
+       "                                       clean_content  author_poem_count  \\\n",
+       "0  —was this\\nthat one fairest river lovd\\nto ble...                 59   \n",
+       "1  sun arise\\nand make happi skies\\nth merri bell...                 38   \n",
+       "2  all truth sound bitter\\na one first believes\\n...                 39   \n",
+       "3  whoso list hunt know hind\\nbut me\\nhéla may mo...                 29   \n",
+       "4  load brush basket cradl chairs\\nlabour along s...                 38   \n",
+       "\n",
+       "   author_poem_index  author_poem_pct  \n",
+       "0                  0              0.0  \n",
+       "1                  0              0.0  \n",
+       "2                  0              0.0  \n",
+       "3                  0              0.0  \n",
+       "4                  0              0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,16 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'Author', 'Title', 'Poetry Foundation ID', 'Content'], dtype='object')"
+       "Index(['Unnamed: 0', 'author', 'title', 'poetry_foundation_id', 'raw_content',\n",
+       "       'clean_content', 'author_poem_count', 'author_poem_index',\n",
+       "       'author_poem_pct'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,6 +227,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_threshold_30 = raw_data.loc[lambda x:x.author_poem_count >= 30]\n",
+    "data_threshold_40 = raw_data.loc[lambda x:x.author_poem_count >= 40]\n",
+    "data_threshold_50 = raw_data.loc[lambda x:x.author_poem_count >= 50]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
