--- a/code/02-build/01-initial-poem-processing.ipynb
+++ b/code/02-build/01-initial-poem-processing.ipynb
@@ -421,11 +421,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_expanded = add_authors_count(data)"
+    "data_expanded = add_authors_count(processed_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>title</th>\n",
+       "      <th>poetry_foundation_id</th>\n",
+       "      <th>content</th>\n",
+       "      <th>clean_content</th>\n",
+       "      <th>author_poem_count</th>\n",
+       "      <th>author_poem_index</th>\n",
+       "      <th>author_poem_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>William Wordsworth</td>\n",
+       "      <td>from\\n  \\n  The Prelude: Book 1: Childhood and...</td>\n",
+       "      <td>45542</td>\n",
+       "      <td>—Was it for this\\nThat one, the fairest of all...</td>\n",
+       "      <td>—was this\\nthat one fairest river lovd\\nto ble...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>William Blake</td>\n",
+       "      <td>The Ecchoing Green</td>\n",
+       "      <td>56592</td>\n",
+       "      <td>The sun does arise,\\nAnd make happy the skies....</td>\n",
+       "      <td>sun arise\\nand make happi skies\\nth merri bell...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Robert Browning</td>\n",
+       "      <td>The Lost Mistress</td>\n",
+       "      <td>50499</td>\n",
+       "      <td>All’s over, then: does truth sound bitter\\nAs ...</td>\n",
+       "      <td>all truth sound bitter\\na one first believes\\n...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sir  Thomas Wyatt</td>\n",
+       "      <td>Whoso List to Hunt, I Know where is an Hind</td>\n",
+       "      <td>45593</td>\n",
+       "      <td>Whoso list to hunt, I know where is an hind,\\n...</td>\n",
+       "      <td>whoso list hunt know hind\\nbut me\\nhéla may mo...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Thomas Hardy</td>\n",
+       "      <td>No Buyers</td>\n",
+       "      <td>44331</td>\n",
+       "      <td>A Load of brushes and baskets and cradles and ...</td>\n",
+       "      <td>load brush basket cradl chairs\\nlabour along s...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3045</th>\n",
+       "      <td>Billy Collins</td>\n",
+       "      <td>The Parade</td>\n",
+       "      <td>41254</td>\n",
+       "      <td>How exhilarating it was to march\\nalong the gr...</td>\n",
+       "      <td>exhilar march\\nalong great boulevards\\nin sunf...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.968750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3046</th>\n",
+       "      <td>Franz Wright</td>\n",
+       "      <td>Imago</td>\n",
+       "      <td>54281</td>\n",
+       "      <td>From my cell I was staring at a cloud, a dog d...</td>\n",
+       "      <td>cell stare cloud dog decay wood etc took longa...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.954545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3047</th>\n",
+       "      <td>Randall Mann</td>\n",
+       "      <td>Bernal Hill</td>\n",
+       "      <td>42307</td>\n",
+       "      <td>Something has to give.\\nWe stand above it all....</td>\n",
+       "      <td>someth give\\nw stand all\\nbelow build tall\\nbu...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.958333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3048</th>\n",
+       "      <td>William Butler Yeats</td>\n",
+       "      <td>Byzantium</td>\n",
+       "      <td>43296</td>\n",
+       "      <td>The unpurged images of day recede;\\nThe Empero...</td>\n",
+       "      <td>unpurg imag day recede\\nth emperor drunken sol...</td>\n",
+       "      <td>47</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0.978723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3049</th>\n",
+       "      <td>Jane Hirshfield</td>\n",
+       "      <td>All the Difficult Hours and Minutes\\n \\n \\n  \\...</td>\n",
+       "      <td>51064</td>\n",
+       "      <td>All the difficult hours and minutes\\nare like ...</td>\n",
+       "      <td>difficult hour minutes\\nar like salt plum jar\\...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.970588</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3050 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    author                                              title  \\\n",
+       "0       William Wordsworth  from\\n  \\n  The Prelude: Book 1: Childhood and...   \n",
+       "1            William Blake                                 The Ecchoing Green   \n",
+       "2          Robert Browning                                  The Lost Mistress   \n",
+       "3        Sir  Thomas Wyatt        Whoso List to Hunt, I Know where is an Hind   \n",
+       "4             Thomas Hardy                                          No Buyers   \n",
+       "...                    ...                                                ...   \n",
+       "3045         Billy Collins                                         The Parade   \n",
+       "3046          Franz Wright                                              Imago   \n",
+       "3047          Randall Mann                                        Bernal Hill   \n",
+       "3048  William Butler Yeats                                          Byzantium   \n",
+       "3049       Jane Hirshfield  All the Difficult Hours and Minutes\\n \\n \\n  \\...   \n",
+       "\n",
+       "      poetry_foundation_id                                            content  \\\n",
+       "0                    45542  —Was it for this\\nThat one, the fairest of all...   \n",
+       "1                    56592  The sun does arise,\\nAnd make happy the skies....   \n",
+       "2                    50499  All’s over, then: does truth sound bitter\\nAs ...   \n",
+       "3                    45593  Whoso list to hunt, I know where is an hind,\\n...   \n",
+       "4                    44331  A Load of brushes and baskets and cradles and ...   \n",
+       "...                    ...                                                ...   \n",
+       "3045                 41254  How exhilarating it was to march\\nalong the gr...   \n",
+       "3046                 54281  From my cell I was staring at a cloud, a dog d...   \n",
+       "3047                 42307  Something has to give.\\nWe stand above it all....   \n",
+       "3048                 43296  The unpurged images of day recede;\\nThe Empero...   \n",
+       "3049                 51064  All the difficult hours and minutes\\nare like ...   \n",
+       "\n",
+       "                                          clean_content  author_poem_count  \\\n",
+       "0     —was this\\nthat one fairest river lovd\\nto ble...                 59   \n",
+       "1     sun arise\\nand make happi skies\\nth merri bell...                 38   \n",
+       "2     all truth sound bitter\\na one first believes\\n...                 39   \n",
+       "3     whoso list hunt know hind\\nbut me\\nhéla may mo...                 29   \n",
+       "4     load brush basket cradl chairs\\nlabour along s...                 38   \n",
+       "...                                                 ...                ...   \n",
+       "3045  exhilar march\\nalong great boulevards\\nin sunf...                 32   \n",
+       "3046  cell stare cloud dog decay wood etc took longa...                 22   \n",
+       "3047  someth give\\nw stand all\\nbelow build tall\\nbu...                 24   \n",
+       "3048  unpurg imag day recede\\nth emperor drunken sol...                 47   \n",
+       "3049  difficult hour minutes\\nar like salt plum jar\\...                 34   \n",
+       "\n",
+       "      author_poem_index  author_poem_pct  \n",
+       "0                     0         0.000000  \n",
+       "1                     0         0.000000  \n",
+       "2                     0         0.000000  \n",
+       "3                     0         0.000000  \n",
+       "4                     0         0.000000  \n",
+       "...                 ...              ...  \n",
+       "3045                 31         0.968750  \n",
+       "3046                 21         0.954545  \n",
+       "3047                 23         0.958333  \n",
+       "3048                 46         0.978723  \n",
+       "3049                 33         0.970588  \n",
+       "\n",
+       "[3050 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_expanded"
    ]
   },
   {
