added bag of words using new pre-processed data and 3 threshold variants

--- a/code/02-build/03-generate-bow.ipynb
+++ b/code/02-build/03-generate-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,17 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshold = 30\n",
+    "threshold = 40\n",
     "data_folder = processed_root(\"02-train-validation-test-split/threshold-\"+str(threshold)+\"/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "'../../data/processed/02-train-validation-test-split/threshold-30/'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,61 +144,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      {features\\ntoward, Grand, land,\\nremand, heart...\n",
-       "1      {of, deep, birds,, vermilion, sweet, play., th...\n",
-       "2      {waters.\\nThe, of, not, way, where\\nthis, alwa...\n",
-       "3      {my, Hock, thirst, Lip,\\nNor, beg,, not, this,...\n",
-       "4      {Wings, noted, –\\n\\nSome, of, Church,\\nOur, ne...\n",
-       "                             ...                        \n",
-       "452    {of, espionage?, be, destiny., happened, bride...\n",
-       "453    {of, though, not, when, thou, stay,\\nAnd, hath...\n",
-       "454    {of, woman’s, born, them, upon, whom, what, di...\n",
-       "455    {of, that,, lovely, might, way, be, Dr., econo...\n",
-       "456    {killing, sacrilege,, of, that,, say'st, honor...\n",
-       "Length: 457, dtype: object"
+       "0       {wind\\nand, main\\n\\nnor, sportively\\nglanc, qu...\n",
+       "1       {sun, weary\\nno, old, sound\\nwhil, merri, dark...\n",
+       "2       {say, mine\\nmer, bitter\\na, stronger\\ni, fully...\n",
+       "3       {cling, shambl, enough, nose\\nh, wide, man\\nsh...\n",
+       "4       {felt, –\\nmen, heaven, aw, behind\\nhunt, shudd...\n",
+       "                              ...                        \n",
+       "1118    {“behold, drink, mouth, “thinkest, world glory...\n",
+       "1119    {light\\nof, meet\\n\\nbut, thi, coy, sweet\\nus, ...\n",
+       "1120    {commandment”\\n\\nand, astonish, marveling\\ngre...\n",
+       "1121    {be\\ntray, true, relat, isn't, alon, pear, mig...\n",
+       "1122    {, genit, true, youth, unreason, hill, visual,...\n",
+       "Length: 1123, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "extract_text(train_data, 'content')"
+    "extract_text(train_data, 'clean_content')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bag_of_words(data, word_data = None):\n",
+    "def bag_of_words(data, content_column, word_data = None):\n",
     "    '''\n",
     "    Purpose: Converts a dataset to bag of words format.\n",
     "    Input: Dataset\n",
     "    Output: Bag of words version of the data\n",
     "    '''\n",
     "    \n",
-    "    texts = extract_text(data, 'content')\n",
+    "    texts = extract_text(data, content_column)\n",
     "        \n",
     "    if word_data is None:\n",
     "        bag = extract_words_from_text(texts)\n",
     "    else:\n",
-    "        bag = extract_words_from_text(extract_text(word_data, 'content'))\n",
+    "        bag = extract_words_from_text(extract_text(word_data, content_column))\n",
     "    \n",
     "    word_occurence = words_in_texts(bag, texts)\n",
     "    \n",
     "    data = data.reset_index(drop = True)\n",
     "    \n",
     "    new_data = pd.DataFrame(data = word_occurence, columns = bag)\n",
-    "    new_data.insert(0, 'poetry_text', data['content'])\n",
+    "    new_data.insert(0, 'poetry_text', data[content_column])\n",
     "    new_data['poetry_author'] = data['author']\n",
     "        \n",
     "    return(new_data)"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,39 +230,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run bag of words"
+    "## Run bag of words for each threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bag_train_data = bag_of_words(train_data)\n",
-    "bag_val_data = bag_of_words(val_data, word_data = train_data)\n",
-    "bag_test_data = bag_of_words(test_data, word_data = train_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bag Train: (457, 1810)\n",
-      "Bag Val: (128, 1810)\n",
-      "Bag Test: (58, 1810)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Bag Train:\", bag_train_data.shape)\n",
-    "print(\"Bag Val:\", bag_val_data.shape)\n",
-    "print(\"Bag Test:\", bag_test_data.shape)"
+    "def bag_of_words_for_threshold(threshold):\n",
+    "    data_folder = processed_root(\"02-train-validation-test-split/threshold-\"+str(threshold)+\"/\")\n",
+    "\n",
+    "    train_data = pd.read_csv(data_folder+\"train_data.csv\")\n",
+    "    val_data = pd.read_csv(data_folder+\"val_data.csv\")\n",
+    "    test_data = pd.read_csv(data_folder+\"test_data.csv\")\n",
+    "\n",
+    "    bag_train_data = bag_of_words(train_data, content_column = 'clean_content')\n",
+    "    bag_val_data = bag_of_words(val_data, \n",
+    "                                content_column = 'clean_content', \n",
+    "                                word_data = train_data)\n",
+    "    bag_test_data = bag_of_words(test_data, \n",
+    "                                 content_column = 'clean_content',\n",
+    "                                 word_data = train_data)\n",
+    "    print(\"Threshold:\", threshold)\n",
+    "    print(\"Bag Train:\", bag_train_data.shape)\n",
+    "    print(\"Bag Val:\", bag_val_data.shape)\n",
+    "    print(\"Bag Test:\", bag_test_data.shape)\n",
+    "    \n",
+    "    dfs_to_save = {'bow_train_data.csv':bag_train_data,\n",
+    "               'bow_val_data.csv':bag_val_data,\n",
+    "               'bow_test_data.csv':bag_test_data}\n",
+    "\n",
+    "    save_datasets(dfs_to_save, save_folder = processed_root(\"03-bag-of-words/threshold-\"+str(threshold)))"
    ]
   },
   {
