added new ml analysis files

--- a/code/02-build/03-generate-bow.ipynb
+++ b/code/02-build/03-generate-bow.ipynb
@@ -230,12 +230,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run bag of words for each threshold"
+    "# Run bag of words for each threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_datasets(df_dict, save_folder):\n",
+    "    for i in df_dict:\n",
+    "        try:\n",
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)\n",
+    "        except FileNotFoundError:\n",
+    "            os.mkdir(save_folder)\n",
+    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,38 +281,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Save dataset"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold: 30\n",
+      "Bag Train: (1123, 4192)\n",
+      "Bag Val: (313, 4192)\n",
+      "Bag Test: (140, 4192)\n",
+      "Threshold: 40\n",
+      "Bag Train: (457, 1899)\n",
+      "Bag Val: (127, 1899)\n",
+      "Bag Test: (59, 1899)\n",
+      "Threshold: 50\n",
+      "Bag Train: (241, 944)\n",
+      "Bag Val: (69, 944)\n",
+      "Bag Test: (31, 944)\n"
+     ]
+    }
+   ],
    "source": [
-    "def save_datasets(df_dict, save_folder):\n",
-    "    for i in df_dict:\n",
-    "        try:\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)\n",
-    "        except FileNotFoundError:\n",
-    "            os.mkdir(save_folder)\n",
-    "            df_dict[i].to_csv(save_folder + \"/\" + i, index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfs_to_save = {'bow_train_data.csv':bag_train_data,\n",
-    "               'bow_val_data.csv':bag_val_data,\n",
-    "               'bow_test_data.csv':bag_test_data}\n",
-    "\n",
-    "save_datasets(dfs_to_save, save_folder = processed_root(\"03-bag-of-words\"))"
+    "bag_of_words_for_threshold(30)\n",
+    "bag_of_words_for_threshold(40)\n",
+    "bag_of_words_for_threshold(50)"
    ]
   }
  ],
