--- a/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
+++ b/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import math as math\n",
     "import janitor\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "import os\n",
     "\n",
     "exec(open(\"../header.py\").read())"
@@ -41,18 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_train_data = pd.read_csv(processed_root(\"03-bag-of-words/bow_train_data.csv\"))\n",
-    "raw_val_data = pd.read_csv(processed_root(\"03-bag-of-words/bow_val_data.csv\"))\n",
-    "raw_test_data = pd.read_csv(processed_root(\"03-bag-of-words/bow_test_data.csv\"))"
+    "threshold = 40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_train_data = pd.read_csv(processed_root(\"03-bag-of-words/threshold-\"+str(threshold)+\"/bow_train_data.csv\"))\n",
+    "raw_val_data = pd.read_csv(processed_root(\"03-bag-of-words/threshold-\"+str(threshold)+\"/bow_val_data.csv\"))\n",
+    "raw_test_data = pd.read_csv(processed_root(\"03-bag-of-words/threshold-\"+str(threshold)+\"/bow_test_data.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +74,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1897"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train.columns)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = DecisionTreeClassifier(max_depth = 5, class_weight = \"balanced\")"
+    "dt = DecisionTreeClassifier(max_depth = 20, class_weight = \"balanced\")"
    ]
   },
   {
@@ -89,21 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "DecisionTreeClassifier(ccp_alpha=0.0, class_weight='balanced', criterion='gini',\n",
-       "                       max_depth=5, max_features=None, max_leaf_nodes=None,\n",
+       "                       max_depth=20, max_features=None, max_leaf_nodes=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                       min_samples_leaf=1, min_samples_split=2,\n",
        "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
        "                       random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -130,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 39.61%\n",
-      "Validation Accuracy: 30.47%\n"
+      "Training Accuracy: 81.40%\n",
+      "Validation Accuracy: 32.28%\n"
      ]
     }
    ],
@@ -164,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
