--- a/code/03-notebooks/Naive Bayes.ipynb
+++ b/code/03-notebooks/Naive Bayes.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_train_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_train_data.csv\"))\n",
+    "raw_val_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_val_data.csv\"))\n",
+    "raw_test_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_test_data.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['poetry_text', 'not', 'pressing', 'sweeping', 'thou', 'universe',\n",
-       "       'darkness', 'death,', 'leafy', 'eye',\n",
+       "Index(['Unnamed: 0', 'poetry_text', 'not', 'pressing', 'sweeping', 'thou',\n",
+       "       'universe', 'darkness', 'death,', 'leafy',\n",
        "       ...\n",
-       "       'uplifted', 'Grace', 'serves', 'candle', 'bronze', 'destin'd',\n",
-       "       'possession', 'Or', 'prompt', 'poetry_author'],\n",
-       "      dtype='object', length=4829)"
+       "       'bronze', 'destin'd', 'possession', 'Or', 'prompt', 'poetry_author',\n",
+       "       'ave_word_len', 'ave_line_len', 'num_syllables', 'num_rhymes'],\n",
+       "      dtype='object', length=4834)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +126,7 @@
        " 'William Butler Yeats']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 86.20%\n",
-      "Validation Accuracy: 30.28%\n"
+      "Training Accuracy: 38.56%\n",
+      "Validation Accuracy: 23.97%\n"
      ]
     }
    ],
