--- a/code/02-build/02b-train-validation-test-split-no-stem.ipynb
+++ b/code/02-build/02b-train-validation-test-split-no-stem.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = pd.read_csv(processed_root(\"01-poetryfoundation/poetry_foundation.csv\"))"
+    "raw_data = pd.read_csv(processed_root(\"01-poetryfoundation/poetry_foundation_no_stem.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "      <th>author</th>\n",
        "      <th>title</th>\n",
        "      <th>poetry_foundation_id</th>\n",
-       "      <th>raw_content</th>\n",
+       "      <th>content</th>\n",
        "      <th>clean_content</th>\n",
        "      <th>author_poem_count</th>\n",
        "      <th>author_poem_index</th>\n",
@@ -105,7 +105,7 @@
        "      <td>The Ecchoing Green</td>\n",
        "      <td>56592</td>\n",
        "      <td>The sun does arise,\\nAnd make happy the skies....</td>\n",
-       "      <td>sun arise\\nand make happi skies\\nth merri bell...</td>\n",
+       "      <td>sun arise\\nand make happy skies\\nthe merry bel...</td>\n",
        "      <td>38</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -117,7 +117,7 @@
        "      <td>The Lost Mistress</td>\n",
        "      <td>50499</td>\n",
        "      <td>All’s over, then: does truth sound bitter\\nAs ...</td>\n",
-       "      <td>all truth sound bitter\\na one first believes\\n...</td>\n",
+       "      <td>all’s truth sound bitter\\nas one first believe...</td>\n",
        "      <td>39</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -129,7 +129,7 @@
        "      <td>Whoso List to Hunt, I Know where is an Hind</td>\n",
        "      <td>45593</td>\n",
        "      <td>Whoso list to hunt, I know where is an hind,\\n...</td>\n",
-       "      <td>whoso list hunt know hind\\nbut me\\nhéla may mo...</td>\n",
+       "      <td>whoso list hunt know hind\\nbut me\\nhélas may m...</td>\n",
        "      <td>29</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -141,7 +141,7 @@
        "      <td>No Buyers</td>\n",
        "      <td>44331</td>\n",
        "      <td>A Load of brushes and baskets and cradles and ...</td>\n",
-       "      <td>load brush basket cradl chairs\\nlabour along s...</td>\n",
+       "      <td>load brush basket cradle chairs\\nlabours along...</td>\n",
        "      <td>38</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
@@ -165,7 +165,7 @@
        "3        Whoso List to Hunt, I Know where is an Hind                 45593   \n",
        "4                                          No Buyers                 44331   \n",
        "\n",
-       "                                         raw_content  \\\n",
+       "                                             content  \\\n",
        "0  —Was it for this\\nThat one, the fairest of all...   \n",
        "1  The sun does arise,\\nAnd make happy the skies....   \n",
        "2  All’s over, then: does truth sound bitter\\nAs ...   \n",
@@ -174,10 +174,10 @@
        "\n",
        "                                       clean_content  author_poem_count  \\\n",
        "0  —was this\\nthat one fairest river lovd\\nto ble...                 59   \n",
-       "1  sun arise\\nand make happi skies\\nth merri bell...                 38   \n",
-       "2  all truth sound bitter\\na one first believes\\n...                 39   \n",
-       "3  whoso list hunt know hind\\nbut me\\nhéla may mo...                 29   \n",
-       "4  load brush basket cradl chairs\\nlabour along s...                 38   \n",
+       "1  sun arise\\nand make happy skies\\nthe merry bel...                 38   \n",
+       "2  all’s truth sound bitter\\nas one first believe...                 39   \n",
+       "3  whoso list hunt know hind\\nbut me\\nhélas may m...                 29   \n",
+       "4  load brush basket cradle chairs\\nlabours along...                 38   \n",
        "\n",
        "   author_poem_index  author_poem_pct  \n",
        "0                  0              0.0  \n",
@@ -187,7 +187,7 @@
        "4                  0              0.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,19 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'author', 'title', 'poetry_foundation_id', 'raw_content',\n",
+       "Index(['Unnamed: 0', 'author', 'title', 'poetry_foundation_id', 'content',\n",
        "       'clean_content', 'author_poem_count', 'author_poem_index',\n",
        "       'author_poem_pct'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,33 +304,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_datasets([train_30, val_30, test_30], \n",
-    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-30\"))"
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-30-no-stem\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_datasets([train_40, val_40, test_40], \n",
-    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-40\"))"
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-40-no-stem\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "save_datasets([train_50, val_50, test_50], \n",
-    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-50\"))"
+    "             save_folder = processed_root(\"02-train-validation-test-split/threshold-50-no-stem\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
