--- a/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
+++ b/code/03-notebooks/01-baseline-decision-tree-bow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import math as math\n",
-    "import janitor\n",
+    "# import janitor\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "import os\n",
     "\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_train_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_train_data-40.csv\"))\n",
+    "raw_val_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_val_data-40.csv\"))\n",
+    "raw_test_data = pd.read_csv(processed_root(\"04-bow-added-features/feat_test_data-40.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1897"
+       "1902"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +143,7 @@
        "                       random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -159,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Accuracy: 58.64%\n",
-      "Validation Accuracy: 29.13%\n"
+      "Training Accuracy: 72.21%\n",
+      "Validation Accuracy: 44.09%\n"
      ]
     }
    ],
@@ -178,7 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.476098166539343"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(raw_val_data[y_pred_val==y_val].groupby(\"poetry_author\").count()[\"poetry_text\"]/\\\n",
+    "raw_val_data.groupby(\"poetry_author\").count()[\"poetry_text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,16 +227,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.31420109710550886"
+       "0.4364233193277311"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
